<resources>
    <string name="app_name">DVP6_B-MyHandyman</string>

    <string name="facebook_app_id">2193237877598639</string>
    <string name="fb_login_protocol_scheme">fb2193237877598639</string>
    <string name="terms_cond">By clicking on login, you are accepting our terms and conditions.</string>
    <string name="construction">Construction</string>
    <string name="mobile_development">Mobile Development</string>
    <string name="skills">SKILLS</string>
    <string name="prajwalr_com">prajwalr.com</string>
    <string name="exp_num">+1 972-214-8923</string>
    <string name="exp_email">prajwalramamurthy@yahoo.com</string>
    <string name="available">AVAILABLE</string>
    <string name="review">REVIEW</string>
    <string name="_38_reviews">38 Reviews</string>
    <string name="ratingsss">*****</string>
    <string name="num_raat">4/5</string>
    <string name="prajwal_ramamurthy">PRAJWAL RAMAMURTHY</string>
    <string name="copyright">Copyright @ 2018 Prajwal Ramamurthy</string>
    <string name="todo">TODO</string>
    <string name="none">none</string>
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="explore">Explore</string>
    <string name="create">Create</string>
    <string name="profile">Profile</string>
    <string name="login_toast">Success! You\'re logged in</string>
    <string name="create_a_service_order">Create a service order</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="select_a_date">Select a Date</string>
    <string name="select_date">SELECT DATE</string>
    <string name="empty_fields_toast">Please do not leave any fields blank.</string>
    <string name="created_order_toast">Congrats! Service Order Created.</string>
    <string name="not_verified">NOT VERIFIED</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_a_handyman">List a handyman</string>
    <string name="bio">Bio</string>
    <string name="years_of_experience">Years of Experience</string>
    <string name="rate_per_hour">Rate Per Hour($)</string>
    <string name="availability">Availability</string>
    <string name="not_a_handyman_click_here_to_post_a_service_order">Not a handyman? Click here to post a service order</string>
    <string name="save">Save</string>
    <string name="upload_id">Upload ID</string>
    <string name="upload_or_take_an_image_to_verify_documentation">Upload or take an image to verify documentation</string>
    <string name="toast_id_saved">Success! ID was saved!</string>
    <string name="toast_id_not_saved">Oops! There was no ID. Verification is not Complete.</string>
    <string name="fb_auth_fail_toast">Authentication failed.</string>


</resources>
