<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="147dp"
        android:contentDescription="@string/none"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wall_three_copy" />

    <TextView
        android:id="@+id/titleOrderView"
        android:layout_width="240dp"
        android:layout_height="18dp"
        android:layout_alignTop="@+id/imageView6"
        android:layout_alignEnd="@+id/imageView6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:hint="@string/title"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descOrderView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleOrderView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/description"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/titleOrderView"
        app:layout_constraintTop_toBottomOf="@+id/titleOrderView" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="89dp"
        android:layout_height="135dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/profile_pic" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/locOrderView"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_below="@+id/descOrderView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:text="@string/location"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/titleOrderView"
        app:layout_constraintTop_toBottomOf="@+id/descOrderView" />

    <TextView
        android:id="@+id/timeOrderView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locOrderView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:text="@string/time"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/descOrderView"
        app:layout_constraintTop_toBottomOf="@+id/locOrderView" />

    <TextView
        android:id="@+id/dateOrderView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeOrderView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:text="@string/date"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/titleOrderView"
        app:layout_constraintTop_toBottomOf="@+id/timeOrderView" />
</android.support.constraint.ConstraintLayout>